--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/noodles.html">Spicy Soy Noodles</a></li>
+        <li><a href="recipes/chicken.html">Classic Spicy Southern Fried Chicken</a></li>
+    </ul>
+    
+    
 </body>
 </html>
