--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,12 +8,13 @@
 <body>
     <h1>Lasagna</h1>
     <img src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg">
-
-    <h2>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</h2>
+    
+    <h2>Description</h2>
+    <p>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</p>
     <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old.</p>
     <p>Make our most popular lasagna today to find out what all the fuss is about!</p>
 
-    <h3>Ingredients</h3>
+    <h2>Ingredients</h2>
     <ul>
         <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
         <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
@@ -25,7 +26,7 @@
         <li>Egg: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
     </ul>
 
-    <h3>Steps</h3>
+    <h2>Steps</h2>
     <ol>
         <li>Make the meat sauce.</li>
         <li>Cook the noodles.</li>
