Add return to homepage links to all recipe pages

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -39,6 +39,8 @@
         <li>Add a few chicken pieces to the hot oil and cook, turning once or twice, until golden brown on the outside, no longer pink at the bone, and the juices run clear, 10 to 15 minutes. An instant read thermometer inserted near the bone should read 165 degrees F (74 degrees C). Maintain the oil temperature around 320 degrees F (160 degrees C) during cooking.</li>
         <li>Remove chicken to the prepared clean wire rack. Return oil to 350 degrees F (175 degrees C) and repeat to fry remaining chicken. Serve immediately.</li>
       </ol>
+
+      <a href="../index.html">Return to homepage</a>
       
 
 </body>
