--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -36,5 +36,7 @@
         <li>Let the lasagna rest before serving.</li>
     </ol>
 
+    <a href="../index.html">Return to homepage</a>
+
 </body>
 </html>
