--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -40,5 +40,6 @@
         <li>Add chicken and any accumulated juices into skillet along with brown sugar. Stir and cook, stirring occasionally, until pasta is cooked and sauce is thickened, 10 to 12 minutes. Add additional water as needed to keep mixture saucy until pasta is cooked. Stir in green onions, sesame seeds and more crushed red pepper if desired.</li>
     </ol>
 
+    <a href="../index.html">Return to homepage</a>
 </body>
 </html>
