Add required attributes to images on recipe pages

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>  
     <h1>Classic Spicy Southern Fried Chicken</h1>
-    <img src="https://www.allrecipes.com/thmb/1WT_Gqc72GqUWpNCvSvdaZsw-30=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8707359_Classic-Southern-Fried-Chicken_Dotdash-Meredith-Food-Studios_4x3-d1d72c169df246e7ab4d6ba8fcb7f431.jpg">
+    <img src="https://www.allrecipes.com/thmb/1WT_Gqc72GqUWpNCvSvdaZsw-30=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8707359_Classic-Southern-Fried-Chicken_Dotdash-Meredith-Food-Studios_4x3-d1d72c169df246e7ab4d6ba8fcb7f431.jpg" alt="Multiple pieces of Southern fried chicken" width="422">
 
     <h2>Description</h2>
     <p>Roscoe's classic spicy Southern fried chicken is the real deal—deeply golden and crisp on the outside, and moist and tender inside. Marinated in buttermilk and hot sauce, it's spicy and flavorful.</p>
