--- a/recipes/noodles.html
+++ b/recipes/noodles.html
@@ -7,7 +7,7 @@
 </head>
 <body>  
     <h1>One Pan Spicy Soy Noodles with Chicken</h1>
-    <img src="https://www.allrecipes.com/thmb/5MzIvzX4wT-guaIDQQHHkofl7c8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8693474_SpicySoyNoodlesWithChickenNicole4x3-edf275b017a44c85a49131148cfcf4b3.jpg">
+    <img src="https://www.allrecipes.com/thmb/5MzIvzX4wT-guaIDQQHHkofl7c8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8693474_SpicySoyNoodlesWithChickenNicole4x3-edf275b017a44c85a49131148cfcf4b3.jpg" alt="bowl of soy noodles" width="422">
 
     <h2>Description</h2>
     <p>A quick and easy one pan recipe with linguine and chicken pieces in a spicy soy-based sauce. Perfect for busy weeknights with minimal clean up.</p>
