Update index.html layout, imagery and colouring

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/noodles.html">Spicy Soy Noodles</a></li>
-        <li><a href="recipes/chicken.html">Classic Spicy Southern Fried Chicken</a></li>
+    <div class='title-container'>
+        <h1>Odin Recipes</h1>
+        <img src="https://img.goodfon.com/original/2031x1152/b/b7/eda-tarelki-fon.jpg">
+    </div>
+    <ul class="recipe-list">
+        <li class="li-first"><img src="https://www.allrecipes.com/thmb/iOfxQGOJTdM0K6edW-MFkn-nydE=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-DDMFS-4x3-1196-24c5401652934ffb96d3d94bc9fbe2d7.jpg" class="li-image"><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li class="li-second"><img src="https://www.allrecipes.com/thmb/5MzIvzX4wT-guaIDQQHHkofl7c8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8693474_SpicySoyNoodlesWithChickenNicole4x3-edf275b017a44c85a49131148cfcf4b3.jpg" class="li-image"><a href="recipes/noodles.html">Spicy Soy Noodles</a></li>
+        <li class="li-third"><img src="https://www.allrecipes.com/thmb/1WT_Gqc72GqUWpNCvSvdaZsw-30=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8707359_Classic-Southern-Fried-Chicken_Dotdash-Meredith-Food-Studios_4x3-d1d72c169df246e7ab4d6ba8fcb7f431.jpg" class="li-image"><a href="recipes/chicken.html">Classic Spicy Southern Fried Chicken</a></li>
     </ul>
     
     
